--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -19,4 +19,4 @@ pipelines:
           onExecute:
             - cmake -B ./build -DCMAKE_BUILD_TYPE=Debug
             - cmake --build ./build --config Debug
-            - ctest -C ${{env.BUILD_TYPE}}
+            - ctest -C Debug
