--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -7,7 +7,7 @@ resources:
 
 
 pipelines:
-  - name: test_repo
+  - name: autosar_example
     configuration:
       nodePool: default-dynamic-nodepool
     steps:
