--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -27,7 +27,7 @@ pipelines:
             - cd $res_repo_res_autosar_resourcePath
             #- wget https://github.com/Kitware/CMake/releases/download/v3.26.1/cmake-3.26.1-linux-x86_64.sh
             - sudo apt install cmake
-            - sh cmake-3.26.1-linux-x86_64.sh
+            #- sh cmake-3.26.1-linux-x86_64.sh
             - cmake -B ./build -DCMAKE_BUILD_TYPE=Debug
             - cmake --build ./build --config Debug
             - ctest -C Debug
