--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -10,18 +10,19 @@ pipelines:
   - name: autosar_example
     configuration:
       nodePool: default-dynamic-nodepool
+      inputResources:
+        - name: repo_res_autosar
+      runtime:
+        type: image
+        image:
+          custom:
+            name: releases-docker.jfrog.io/jfrog/pipelines-u20cpp
+              tag: '9'
     steps:
-      - name: autosar_build_test
+      - name: autosar_build
         type: Bash
         configuration:
-          inputResources:
-            - name: repo_res_autosar
-          runtime:
-            type: image
-            image:
-              custom:
-                name: releases-docker.jfrog.io/jfrog/pipelines-u20cpp
-                tag: '9'
+          affinityGroup: autosar
         execution:
           onExecute:
             - cd $res_repo_res_autosar_resourcePath
@@ -30,6 +31,17 @@ pipelines:
             #- sh cmake-3.26.1-linux-x86_64.sh
             - cmake -B ./build -DCMAKE_BUILD_TYPE=Debug
             - cmake --build ./build --config Debug
-            - cd ./build
+            #- cd ./build
+            #- ctest -C Debug
+            #- ls -l
+            #- save_tests $res_src_repo_resourcePath/build/target/Testing/
+      - name: autosar_test
+        type: Bash
+        configuration:
+          affinityGroup: autosar
+        execution:
+          onExecute:
+            - cd $res_repo_res_autosar_resourcePath/build
             - ctest -C Debug
             - ls -l
+            - save_tests $res_src_repo_resourcePath/build/target/Testing/
