--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -7,7 +7,7 @@ resources:
   - name: autosar_build_info
     type: BuildInfo
     configuration:
-      sourceArtifactory: Artifactory
+      sourceArtifactory: hk_artifactory
       buildName: autosar_example
       buildNumber: ${run_number}
 
