--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -28,8 +28,6 @@ pipelines:
         type: Bash
         configuration:
           affinityGroup: autosar
-          inputResources:
-            - name: repo_res_autosar
           outputResources:
             - name: autosar_build_info
         execution:
@@ -40,16 +38,15 @@ pipelines:
             #- sh cmake-3.26.1-linux-x86_64.sh
             - cmake -B ./build -DCMAKE_BUILD_TYPE=Debug
             - cmake --build ./build --config Debug
-            #- cd ./build
-            #- ctest -C Debug
+            - cd ./build
+            - ctest -C Debug
             - ls -l
-            #- save_tests $res_src_repo_resourcePath/build/target/Testing/
+            - save_tests $res_src_repo_resourcePath/build/Testing/
       - name: autosar_test
         type: Bash
         configuration:
           affinityGroup: autosar
           inputResources:
-            - name: repo_res_autosar
             - name: autosar_build_info
         execution:
           onExecute:
