--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -21,8 +21,8 @@ pipelines:
         type: image
         image:
           custom:
-            name: releases-docker.jfrog.io/jfrog/pipelines-u20cpp
-            tag: '9'
+            name: pipelines.jfrog.io/pipelines-runtime-images/pipelines-w19cpp-ckmake
+            tag: '1'
     steps:
       - name: autosar_build
         type: Bash
@@ -33,10 +33,10 @@ pipelines:
         execution:
           onExecute:
             - cd $res_repo_res_autosar_resourcePath
-            - wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null
-            - sudo apt-add-repository 'deb https://apt.kitware.com/ubuntu/ focal main'   
-            - sudo apt update
-            - sudo apt install cmake
+            #- wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null
+            #- sudo apt-add-repository 'deb https://apt.kitware.com/ubuntu/ focal main'   
+            #- sudo apt update
+            #- sudo apt install cmake
             - cmake --version
             - cmake -B ./build -DCMAKE_BUILD_TYPE=Debug
             - cmake --build ./build --config Debug
@@ -49,10 +49,10 @@ pipelines:
             - name: autosar_build_info
         execution:
           onExecute:
-            - wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null
-            - sudo apt-add-repository 'deb https://apt.kitware.com/ubuntu/ focal main'   
-            - sudo apt update
-            - sudo apt install cmake
+            #- wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null
+            #- sudo apt-add-repository 'deb https://apt.kitware.com/ubuntu/ focal main'   
+            #- sudo apt update
+            #- sudo apt install cmake
             - cmake --version
             - cd $shared_workspace/
             - cd ./build
