--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -585,5 +585,5 @@ if(build_tests)
 
   include(GoogleTest)
   gtest_discover_tests(arxml_unit_test)
-  gtest_discover_tests(ara_unit_test)
+  #gtest_discover_tests(ara_unit_test)
  endif()
