--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -36,7 +36,7 @@ pipelines:
             - cmake -B ./build -DCMAKE_BUILD_TYPE=Debug
             - cmake --build ./build --config Debug
             - cp -r ./build $shared_workspace
-      - name: autosar_test
+      - name: autosar_full_test
         type: Bash
         configuration:
           affinityGroup: autosar
@@ -46,14 +46,17 @@ pipelines:
           onExecute:
             - cd $shared_workspace/
             - cd ./build
-            #-rwxr-xr-x 1 root root 19579464 Mar 29 18:13 ara_unit_test
-            ##-rwxr-xr-x 1 root root  3829896 Mar 29 18:13 arxml_unit_test
-            #- mkdir ara_unit_test
-            #- mkdir arxml_unit_test
-            #- cp bin/ara_unit_test ara_unit_test
-            #- cp bin/arxml_unit_test arxml_unit_test
-            - ls -l
-            - ./bin/ara_unit_test --gtest_list_tests
-            - ./bin/arxml_unit_test --gtest_list_tests
             - ctest -C Debug --output-junit test_results.xml
+            - save_tests test_results.xml
+      - name: autosar_partial_test
+        type: Bash
+        configuration:
+          affinityGroup: autosar
+          inputResources:
+            - name: autosar_build_info
+        execution:
+          onExecute:
+            - cd $shared_workspace/
+            - cd ./build
+            - ctest -R 'ArxmlNodeTest*' -C Debug --output-junit test_results.xml
             - save_tests test_results.xml
