--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -15,6 +15,7 @@ pipelines:
   - name: autosar_example
     configuration:
       nodePool: default-dynamic-nodepool
+      jfrogCliVersion: '2'
       runtime:
         type: image
         image:
@@ -25,7 +26,7 @@ pipelines:
       - name: autosar_build
         type: Bash
         configuration:
-          #affinityGroup: autosar
+          affinityGroup: autosar
           inputResources:
             - name: repo_res_autosar
           outputResources:
@@ -35,7 +36,7 @@ pipelines:
             - cd $res_repo_res_autosar_resourcePath
             - cmake -B ./build -DCMAKE_BUILD_TYPE=Debug
             - cmake --build ./build --config Debug
-            #- cp -r ./build $shared_workspace
+            - cp -r ./build $shared_workspace
             #- add_cache_files ./build autosar_build
       - name: autosar_full_test
         type: Bash
@@ -43,27 +44,34 @@ pipelines:
           affinityGroup: autosar
           inputSteps: 
             - name: autosar_build
+        stepletMultipliers:
+          environmentVariables:
+            - module: '*'
+            - module: 'ArxmlNodeTest*'
         execution:
           onExecute:
-            - restore_cache_files autosar_build /tmp/
-            - ls -l /tmp/
+            #- restore_cache_files autosar_build /tmp/
+            #- ls -l /tmp/
+            - cd $shared_workspace/
+            - cd ./build
+            - cd $res_repo_res_autosar_resourcePath/build
+            - ctest -R "$module" -C Debug --output-junit test_results.xml
+            - save_tests test_results.xml
+          onComplete:
+            - save_tests test_results.xml
+      #- name: autosar_partial_test
+       # type: Bash
+        #configuration:
+         # #affinityGroup: autosar
+          #inputSteps: 
+           # - name: autosar_build
+        #execution:
+          #onExecute:
+           # - restore_cache_files autosar_build /tmp/
+            #- ls -l /tmp/
             #- cd $shared_workspace/
             #- cd ./build
-            - cd $res_repo_res_autosar_resourcePath/build
-            - ctest -C Debug --output-junit test_results.xml
-            - save_tests test_results.xml
-      - name: autosar_partial_test
-        type: Bash
-        configuration:
-          #affinityGroup: autosar
-          inputSteps: 
-            - name: autosar_build
-        execution:
-          onExecute:
-            - restore_cache_files autosar_build /tmp/
-            - ls -l /tmp/
-            #- cd $shared_workspace/
-            #- cd ./build
-            - cd $res_repo_res_autosar_resourcePath/build
-            - ctest -R 'ArxmlNodeTest*' -C Debug --output-junit test_results.xml
-            - save_tests test_results.xml
+            #- cd $res_repo_res_autosar_resourcePath/build
+            #- ctest -R 'ArxmlNodeTest*' -C Debug --output-junit test_results.xml
+          #onComplete:
+          #  - save_tests test_results.xml
