--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -55,7 +55,8 @@ pipelines:
             #- ls -l /tmp/
             - cd $shared_workspace/
             - cd ./build
-            - cd $res_repo_res_autosar_resourcePath/build
+            - echo $module
+            #- cd $res_repo_res_autosar_resourcePath/build
             - ctest -R "$module" -C Debug --output-junit test_results.xml
             - save_tests test_results.xml
           onComplete:
