--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -48,7 +48,7 @@ pipelines:
         stepletMultipliers:
           environmentVariables:
             - module: '*'
-            - module: 'ArxmlNodeTest*'
+            - module: '*'
         execution:
           onExecute:
             #- restore_cache_files autosar_build /tmp/
@@ -58,8 +58,8 @@ pipelines:
             - echo $module
             #- cd $res_repo_res_autosar_resourcePath/build
             - ctest -R "$module" -C Debug --output-junit test_results.xml
-            - save_tests test_results.xml
           onComplete:
+            - sleep 60
             - save_tests test_results.xml
       #- name: autosar_partial_test
        # type: Bash
