--- a/.jfrog-pipelines/values.yml
+++ b/.jfrog-pipelines/values.yml
@@ -2,7 +2,7 @@ var:
   pipelineName: autosar_build
   gitProvider: hk_github
   path: harshkumar1/Adaptive-AUTOSAR
-  branches: main
+  branches: master
   nodePool: default-dynamic-nodepool
   artifactory: hk_artifactory
   customImage: pipelines.jfrog.io/pipelines-runtime-images/pipelines-w19cpp-ckmake
